# minig_stm32

./: CMakeLists.txt  package.xml
include/stm32/: stm32.h
launch/: fakevalues.launch  stm32.launch
scripts/: stm32_node.cpp
src/: fakevalues.py  stm32.cpp
src/stm32/: stm32.cpp
srv/: Intensitylightcamfrequency.srv
